# Joystick-Monitor

./: .gitignore  Cargo.toml  README.md
config/: Config ReadMe.md  ConfigReadMe.md  joystick_monitor.ini
img/: h.htm  images.htm
src/: about.rs  device.rs  main.rs
