[package]
name = "joystick_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
configparser = "3.0.2"
chrono = "0.4.23"
eframe = "0.19.0"
egui = "0.19.0"
egui_extras = {version = "0.19.0", default-features = false, features = ["image", "svg"]  }
function_name = "0.3.0"
hidapi = "2.0.2"
image = { version = "0.24", features = ["jpeg", "png"] }
once_cell = "1.16.0"
#simple_logging = "2.0.2"
walkdir = "2.3.2"
log = "0.4"
fern = "0.6"
